2024-10-02 Max Derhak
* Incorporate changes from Bug Tracker analysis
* Added version of ValidateProfile() function to validate embedded in memory profiles
* Fixed minor offset sync problem with LutAtoB reading

2024-09-25 Max Derhak
* Refactor PCS operation to improve performance

2024-05-10 Max Derhak
* Added JSON config file ultility code for use by applications (added new dependency on JSON for Modern C++ - see https://github.com/nlohmann/json_
* Modified IccApplyNamedCmm and iccApplyProfiles to optionally use JSON configuraiton files to control behavior resulting in new features
* Added limited support to read/write from CGATS IT8 files using iccApplyNamedProfiles
* PCC processing elements can now have access to CMM environment variables
* Modified N-Dimensional LUT interpolation to be thread safe (Moved modification of LUT object to apply LUT object)

2023-03-24 Max Derhak
* Added iccApplyToLink tool that applies a sequence of profiles to create a device link profile or .cube file
* Various bug fixes related to HToS tag support

2023-03-10 Max Derhak
* Add support for HToS tags
* Add iccFromCube tool to convert .cube files to Device Link ICC profiles
* Update utf8 handling of text
* Various bug fixes

2021-09 to 2021-10 Peter Wyatt
* Fixed MSVC Solution files for MSVC v19 due to name change to DemoIccMAX
* Fixed various compiler errors for newer versions of LLVM and CLANG
* Validation will now explicitly report duplicate tags, names and elements with correct error text
* The iccDumpProfile -v option now takes an optional integer argument which controls verbosity. Default is 100 where all data is verbosely dumped (old behaviour; 75 will dump everything except LUTs; 50 is no data dumping; etc.
* Corrected hex value for 'War1'
* Corrected hex value for 'bcpr'
* Corrected for m_Header.illuminant.Z check in CIccProfile::CheckHeader()
* Fleshed out some missing Describe() methods to get better reporting